deploy/k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-board-api
  namespace: release-board-raw
  labels:
    app: release-board-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: release-board-api
  template:
    metadata:
      labels:
        app: release-board-api
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: release-board-api
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: k3d-release-board-registry.localhost:5000/release-board@sha256:727536d53a127f4c8aaf40facb6b1f128afd3bda186faae2f8d3034aae8159b5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /live
              port: http
            periodSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /live
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: [ "sleep", "5" ]
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: release-board-api
  namespace: release-board-raw
spec:
  type: ClusterIP
  selector:
    app: release-board-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
